@startuml arch-data-model


title Data Model Architecture

package "Document Models" {
  
  class LibraryDocument {
    +string Id
    +string Tenantid
    +List<LibraryContent> LibraryContents
    +LibraryDocument()
    +LibraryDocument(id, tenantid, contents)
  }
  
  class LibraryContent {
    +string LibraryName
    +List<Chapter> Chapters
    +LibraryContent()
    +LibraryContent(name, chapters)
  }
  
  class Chapter {
    +string Description
    +string Name
    +string Url
    +string Source
    +Chapter()
    +Chapter(description, name, url, source)
  }
  
  class PlaylistsDocument {
    +string Id
    +List<PlaylistsContent> PlaylistsContents
    +PlaylistsDocument()
    +PlaylistsDocument(id, contents)
  }
  
  class PlaylistsContent {
    +string PlaylistName
    +List<Track> Tracks
    +PlaylistsContent()
    +PlaylistsContent(name, tracks)
  }
  
  class Track {
    +string Description
    +string Name
    +string Url
    +string Source
    +Track()
    +Track(description, name, url, source)
  }
  
  class UserList {
    +string Id
    +List<User> Users
    +UserList()
    +UserList(id, users)
  }
  
  class User {
    +string FirstName
    +string LastName
    +string Email
    +string Role
    +string Password
    +User()
    +User(firstName, lastName, email, role, password)
  }
}

' Relationships
LibraryDocument *-- LibraryContent : contains
LibraryContent *-- Chapter : contains
PlaylistsDocument *-- PlaylistsContent : contains
PlaylistsContent *-- Track : contains
UserList *-- User : contains

note top of LibraryDocument
  Root document for
  library content organization
end note

note top of PlaylistsDocument
  Root document for
  playlist management
end note

note right of Chapter
  Individual content items
  with video integration
end note

note right of Track
  Playlist items that can
  reference video content
end note

@enduml
